Initial attempt to implement MIML-RE extension for handling when it is unknown whether a relation holds or not.